# controller/image_services/handler/routes.go
@@ -8,7 +8,7 @@ import (
 func RegisterImageRoutes(rg *gin.RouterGroup, db *sqlx.DB) {
 	eg := rg.Group("/post/:post_id/image")
 	{
-		eg.POST("/:image_url", addImageHandler(db))
+		eg.POST("", addImageHandler(db))
 		eg.DELETE("/:image_id", deleteImageInPostMarketHandler(db))
 	}
 }
